123/MyProject/src/objects/Motor_Insurance__c.object
<CustomObject>
    <fields>
        <fullName>Agent_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Agent ID</label>
        <referenceTo>Agent__c</referenceTo>
        <relationshipLabel>Motor Insurances</relationshipLabel>
        <relationshipName>Motor_Insurances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufactured_Year__c</fullName>
        <label>Manufactured Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Motor_Color__c</fullName>
        <label>Motor Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motor_Type__c</fullName>
        <label>Motor Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Policy_Holder__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Terms__c</fullName>
        <label>No. of Terms</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Policy_Holder__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Policy Holder</label>
        <referenceTo>Policy_Holder__c</referenceTo>
        <relationshipLabel>Motor Insurances</relationshipLabel>
        <relationshipName>Motor_Insurances</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premium_Amount__c</fullName>
        <label>Premium Amount</label>
        <precision>10</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Premium_End_Date__c</fullName>
        <label>Premium End  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium_Start_Date__c</fullName>
        <label>Premium Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Premium_Type__c</fullName>
        <label>Premium Type</label>
        <picklist>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Paid_Amount__c</fullName>
        <label>Total Paid Amount</label>
        <summarizedField>Payment__c.Premium_Amount__c</summarizedField>
        <summaryForeignKey>Payment__c.Motor_Insurance__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Motor Insurance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MIID-{0000}</displayFormat>
        <label>Policy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Motor Insurances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>